--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     compile 'org.fusesource.jansi:jansi:2.3.1'
     compile 'org.jetbrains:annotations:20.1.0'
+    compile 'com.google.code.gson:gson:2.8.6'
 }
 
 test {
