--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile 'org.fusesource.jansi:jansi:2.3.1'
     compile 'org.jetbrains:annotations:20.1.0'
     compile 'com.google.code.gson:gson:2.8.6'
+    compile 'org.apache.commons:commons-lang3:3.12.0'
 }
 
 test {
